# meds_etl

./: .gitignore  .pre-commit-config.yaml  CLEANUP_SUBPROCESS_WORKAROUND.md  CONTRIBUTING.md  CORRUPTION_HANDLING.md  HANG_DIAGNOSIS.md  IMPROVEMENTS_SUMMARY.md  PERFORMANCE_FIX.md  README.md  benchmarking.md  check_progress.py  monitor_etl.sh  omop_etl_base_config.json  omop_etl_simple_config.json  omop_etl_vista_config.json  pyproject.toml
.github/workflows/: python-build.yml  python-test.yml
cbuild/: .gitignore  Makefile
cbuild/configs/: complete.json  example_config.json
cbuild/src/: arrow_reader.h  arrow_writer.h  config.h  csv_reader.h  event_row.h  file_utils.h  gz_writer.h  json_parser.h  logger.h  merge_stage.h  merge_stage.h.backup  parquet_writer.h  partition_stage.h  sharded_join_min.cpp  sharded_join_refactored.cpp  string_utils.h  time_utils.h
data/: .gitignore
data/examples/meds_omop_ehrshot/metadata/: dataset.json
depricated/: omop_scalable.py
docs/: config_schema.md  omop_schema.md  review.md
examples/: README.md  omop_etl_base_config.json  omop_etl_base_v53_config.json  omop_etl_extended_config.json  omop_etl_standard_5.4.json  omop_etl_vista_config.json  omop_etl_vista_config_templated.json  omop_etl_vista_omop_concepts.json  omop_etl_vista_raw_codes.json  omop_etl_vista_std_concepts.json  omop_etl_vista_tmpl_strict.json  omop_etl_with_properties.json
examples/depricated/: omop_etl_vista_config.json  omop_etl_vista_omop_concepts.json
scripts/: analyze_config_mapping.py  compare_meds_detailed.py  compare_meds_outputs.py  compare_meds_outputs_light.py
scripts/analysis/: README.md  code_frequency.py
scripts/benchmarking/: README_BENCHMARKING.md  analyze_results.py  benchmark_methods_bakeoff.py  benchmark_streaming_tuning.py
scripts/benchmarking/reports/: PERFORMANCE_REPORT_20251122_143424.md
scripts/benchmarking/runs/: benchmark_bakeoff_20251121_215745.json  tuning_streaming_20251121_204832.json  tuning_streaming_20251121_233928.json
scripts/vista/: benchmark-macbook.sh  benchmark-shahlab-secure.sh  etl-macbook.sh  etl-shahlab-secure.sh  shahlab-secure-etl.sh
src/meds_etl/: config_compiler.py  config_integration.py  config_parser.py  config_schema.py  omop.py  omop_common.py  omop_legacy.py  omop_refactor.py  omop_refactor_streaming.py  omop_scalable.py  omop_streaming.py  unsorted.py  vocabulary.py
tests/: README_TESTS.md  fixtures_omop.py  test_column_extraction.py  test_config_compiler.py  test_config_integration.py  test_config_parser.py  test_dsl_enhancements.py  test_new_config_format.py  test_omop.py  test_omop_common_helpers.py  test_omop_legacy_helpers.py  test_omop_runners.py  test_omop_shard_sort.py  test_omop_streaming.py  test_streaming_sort.py  test_unsorted.py
tests/fixtures/: test_config.json
