[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 69.0", "setuptools-scm>=8.0"]

[project]
description = "A data standard for working with event stream data"
dynamic = ["version"]
license = {text = "Apache-2.0"}
name = "meds_etl"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pyarrow >= 8",
  "polars >= 1.22",
  "jsonschema >= 4.0.0",
  "meds == 0.3.3",
  "typing_extensions >= 4.0",
  "tqdm >= 4.6.0",
]

[project.optional-dependencies]
benchmarking = [
  "numpy >= 1.24",
  "matplotlib >= 3.7",
  "pandas >= 2.0",
]
cpp = [
  "meds_etl_cpp == 0.3.4",
]
dev = [
  "pytest >= 9.0",
  "pytest-cov >= 4.0",
  "black >= 24.0",
  "isort >= 5.13",
  "ruff >= 0.1.0",
]
tests = [
  "pytest >= 9.0",
]

[project.scripts]
meds_etl_mimic = "meds_etl.mimic:main"
meds_etl_omop = "meds_etl.omop:main"
meds_etl_omop_streaming = "meds_etl.omop_streaming:main"
meds_etl_sort = "meds_etl.unsorted:sort_main"

[tool.setuptools_scm]
version_file = "src/meds_etl/_version.py"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.black]
line_length = 120
target_version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "E501", # line too long (handled by black)
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
